--- a/test_create_passwords.ipynb
+++ b/test_create_passwords.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "wifisidechannels-sEVZrtBk-py3.10",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
